objects/Nebula__LogStatus__mdt.object
<CustomObject>
    <description>Controls which picklist values for Log__c.Status__c are considered closed and/or resolved</description>
    <fields>
        <fullName>Nebula__IsActive__c</fullName>
        <complianceGroup>None</complianceGroup>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__IsClosed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <defaultValue>false</defaultValue>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__IsResolved__c</fullName>
        <complianceGroup>None</complianceGroup>
        <defaultValue>false</defaultValue>
        <label>Is Resolved</label>
        <type>Checkbox</type>
    </fields>
    <label>Log Status</label>
    <listViews>
        <fullName>Nebula__All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Nebula__IsActive__c</columns>
        <columns>Nebula__IsClosed__c</columns>
        <columns>Nebula__IsResolved__c</columns>
        <columns>NamespacePrefix</columns>
        <columns>IsProtected</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Log Statuses</pluralLabel>
    <validationRules>
        <fullName>Nebula__Only_closed_can_be_resolved</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Nebula__IsClosed__c = false,
    Nebula__IsResolved__c = true
)</errorConditionFormula>
        <errorDisplayField>Nebula__IsResolved__c</errorDisplayField>
        <errorMessage>Is Resolved cannot be set to true unless Is Closed is true</errorMessage>
    </validationRules>
</CustomObject>